--- a/Data/CSS/main.css
+++ b/Data/CSS/main.css
@@ -356,7 +356,7 @@ a:not([class]) {
   transition-delay: margin-top .5s;
 }
 
-.mBtn[menu]:not([mobile]) {
+html:not([mobile]) .mBtn[menu] {
   margin-top: 70px;
 }
 
