--- a/Data/CSS/main.css
+++ b/Data/CSS/main.css
@@ -748,16 +748,16 @@ html[mobile] .balls {
 
 
 
- /*$$$$$$$ /$$   /$$ /$$$$$$$$ /$$$$$$$$ /$$$$$$$ 
-| $$_____/| $$$ | $$|__  $$__/| $$_____/| $$__  $$
-| $$      | $$$$| $$   | $$   | $$      | $$  \ $$
-| $$$$$   | $$ $$ $$   | $$   | $$$$$   | $$$$$$$/
-| $$__/   | $$  $$$$   | $$   | $$__/   | $$__  $$
-| $$      | $$\  $$$   | $$   | $$      | $$  \ $$
-| $$$$$$$$| $$ \  $$   | $$   | $$$$$$$$| $$  | $$
-|________/|__/  \__/   |__/   |________/|__/  |_*/
+ /*$      /$$  /$$$$$$  /$$    /$$ /$$$$$$$$  /$$$$$$ 
+| $$  /$ | $$ /$$__  $$| $$   | $$| $$_____/ /$$__  $$
+| $$ /$$$| $$| $$  \ $$| $$   | $$| $$      | $$  \__/
+| $$/$$ $$ $$| $$$$$$$$|  $$ / $$/| $$$$$   |  $$$$$$ 
+| $$$$_  $$$$| $$__  $$ \  $$ $$/ | $$__/    \____  $$
+| $$$/ \  $$$| $$  | $$  \  $$$/  | $$       /$$  \ $$
+| $$/   \  $$| $$  | $$   \  $/   | $$$$$$$$|  $$$$$$/
+|__/     \__/|__/  |__/    \_/    |________/ \_____*/ 
 
-.enter {
+.waves {
   height: 100%; 
   width: 100%; 
   position: fixed; 
@@ -767,111 +767,6 @@ html[mobile] .balls {
   align-items: center; 
   justify-content: center; 
   transition: opacity 1s;
-}
-
-.enBox {
-  width: max-content;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  transition: transform .1s;
-  --glitchOp: 0;
-}
-
-.enBox:hover {
-  transform: scale(1.025, 1.025);
-  --glitchOp: 1;
-}
-
-.enBtn {
-  --slice-0: inset(50% 50% 50% 50%);
-  --slice-1: inset(80% -6px 0 0);
-  --slice-2: inset(50% -6px 30% 0);
-  --slice-3: inset(10% -6px 85% 0);
-  --slice-4: inset(40% -6px 43% 0);
-  --slice-5: inset(80% -6px 5% 0);
-  --a1: rgb(243, 14, 64);
-  --a2: #00d6f4;
-  color: #f5f5f5;
-  padding: 16px 20px;
-  font-family: blender;
-  font-size: 18px;
-  background: linear-gradient(45deg, transparent 5%, var(--a1) 5%);
-  border: 0;
-  letter-spacing: 2px;
-  line-height: 1;
-  box-shadow: 2px 0px 0px var(--a2);
-  cursor: pointer;
-}
-
-.enBtn[glitch] {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: linear-gradient(45deg, transparent 3%, var(--a2) 3%, var(--a2) 5%, var(--a1) 5%);
-  text-shadow: -3px -3px 0px #f8f005, 3px 3px 0px #00e6f6;
-  animation: .5s glitch infinite;
-  opacity: var(--glitchOp);
-  pointer-events: none;
-}
-
-@keyframes glitch {
-  0% {
-    clip-path: var(--slice-1);
-    transform: translate(-20px, -10px);
-  }
-
-  10% {
-    clip-path: var(--slice-3);
-    transform: translate(10px, 10px);
-  }
-
-  20% {
-    clip-path: var(--slice-1);
-    transform: translate(-10px, 10px);
-  }
-
-  30% {
-    clip-path: var(--slice-3);
-    transform: translate(0px, 5px);
-  }
-
-  40% {
-    clip-path: var(--slice-2);
-    transform: translate(-5px, 0px);
-  }
-
-  50% {
-    clip-path: var(--slice-3);
-    transform: translate(5px, 0px);
-  }
-
-  60% {
-    clip-path: var(--slice-4);
-    transform: translate(5px, 10px);
-  }
-
-  70% {
-    clip-path: var(--slice-2);
-    transform: translate(-10px, 10px);
-  }
-
-  80% {
-    clip-path: var(--slice-5);
-    transform: translate(20px, -10px);
-  }
-
-  90% {
-    clip-path: var(--slice-1);
-    transform: translate(-10px, 0px);
-  }
-
-  100% {
-    clip-path: var(--slice-1);
-    transform: translate(0);
-  }
 }
 
 .wave {
@@ -1152,7 +1047,7 @@ html[mobile] .balls {
   background: var(--accentT);
 }
 
-/*BIG PROJECTS*/
+/*PROJECTS*/
 .pr {
   height: min-content;
   display: flex;
@@ -1183,73 +1078,114 @@ html[mobile] .pr > div:nth-of-type(1) {
   width: 100%; 
 }
 
-.pr > div:nth-of-type(1) > img {
-  width: calc(100% - 40px); 
-  margin: 20px; 
-  aspect-ratio: 16/9;
-  border-radius: 10px;
-  object-fit: cover;
-}
-
-.pr > div:nth-of-type(1) > span {
+.pr > div:nth-of-type(1) > span:nth-of-type(1) {
   padding: 8px 14px;
 
   position: absolute; 
+  z-index: 2; 
   top: -3px; 
   left: -12px;  
+  opacity: 1;
   
-  background-color: var(--button); 
   border-radius: 10px; 
-  box-shadow: 1px 1px 5px var(--bg), 1px -1px 5px var(--bg), -1px -1px 5px var(--bg), -1px 1px 5px var(--bg);
+  background-color: var(--button); 
+  box-shadow: 1px 1px 5px var(--bg), 
+              1px -1px 5px var(--bg), 
+              -1px -1px 5px var(--bg), 
+              -1px 1px 5px var(--bg);
   
   transform: rotate(-10deg);
+
+  transition: opacity 0.3s;
 }
 
-.pr[reverse] > div:nth-of-type(1) > span {
-  position: absolute; 
+.pr[reverse] > div:nth-of-type(1) > span:nth-of-type(1) {
   left: auto;  
   right: -12px;  
 
   transform: rotate(10deg);
 }
 
-.pr > div:nth-of-type(1) > div {
-  height: 40px;
-  width: 40px;
+.pr > div:nth-of-type(1)[video] > span:nth-of-type(1) {
+  opacity: 0;
+}
 
-  position: absolute;
-  bottom: 30px; 
-  left: 30px;
+.pr > div:nth-of-type(1) > div:nth-of-type(1) {
+  width: 100%;
+
   display: flex;
   align-items: center;
   justify-content: center;
 
-  box-sizing: border-box;
-  border: solid 2px var(--accent);
-  border-radius: 50px;
+  position: absolute; 
+  z-index: 2; 
+  bottom: 10px;
 
+  pointer-events: none;
+}
+
+.pr > div:nth-of-type(1) > div:nth-of-type(1) > span {
+  padding: 10px 15px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  border-radius: 30px; 
+  background-color: var(--button);
+  outline: solid 2px var(--accent);/**/
+  /*box-shadow: 1px 1px 5px var(--button), 
+              1px -1px 5px var(--button), 
+              -1px -1px 5px var(--button), 
+              -1px 1px 5px var(--button);*/
+  
+  pointer-events: all;
   cursor: pointer;
-  transition: background .1s;
+
+  transition: transform .3s;
 }
 
-.pr[reverse] > div:nth-of-type(1) > div {
-  left: auto;
-  right: 30px;
-} 
-
-.pr > div:nth-of-type(1) > div:hover {
-  background: var(--accentT);
+.pr > div:nth-of-type(1)[video] > div:nth-of-type(1) > span {
+  transform: translateY(40px);
 }
 
-.pr > div:nth-of-type(1) > div img {
-  height: 20px;
-  width: 20px;
-  filter: var(--accentFilter);
+.pr > div:nth-of-type(1) > div:nth-of-type(2) {
+  width: calc(100% - 40px); 
+  margin: 20px; 
+  aspect-ratio: 16/9;
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+  background-color: var(--accent);
 }
 
-html:not([mobile]) .pr > div:nth-of-type(1):hover + div:nth-of-type(2) {
-  transition-delay: 1s;
+.pr > div:nth-of-type(1) > div:nth-of-type(2) > img {
+  width: 100%; 
+  height: 100%;
+  object-fit: cover;
+}
+
+.pr > div:nth-of-type(1) > div:nth-of-type(2) > iframe {
+  width: 100%; 
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: -2px;
+}
+
+.pr > div:nth-of-type(1)[video] > div:nth-of-type(2) > iframe {
+  display: flex;
+}
+
+.pr > div:nth-of-type(1):hover + div:nth-of-type(2),
+.pr > div:nth-of-type(1)[video] + div:nth-of-type(2) {
   z-index: -1;
+}
+
+html:not([mobile]) .pr > div:nth-of-type(1):hover + div:nth-of-type(2),
+html:not([mobile]) .pr > div:nth-of-type(1)[video] + div:nth-of-type(2) {
+  transition-delay: 0.5s;
   opacity: .6;
 }
 
