--- a/Data/CSS/main.css
+++ b/Data/CSS/main.css
@@ -18,6 +18,7 @@ html {
 
   /*Colors*/
   --bg: #0A192F;
+  --bgT: #0a192f9d;
   --button: #0c203d;
   --text: #f5f5f5;
   --textFilter: brightness(0) invert(1);
@@ -49,6 +50,7 @@ html {
 
 html[light] {
   --bg: #ffffff;
+  --bgT: #ffffff69;
   --button: #e4e9f2;
   --text: #000000;
   --textFilter: brightness(0);
@@ -291,6 +293,7 @@ html[mobile] .socials {
   gap: 25px;
 
   box-sizing: border-box;
+  background: var(--bgT); 
   backdrop-filter: blur(5px);
 
   box-shadow: 0 2px 15px var(--bg);
@@ -299,27 +302,9 @@ html[mobile] .socials {
 }
 
 html[mobile] .nav {
+  background: transparent; 
   backdrop-filter: none;
   box-shadow: none;
-}
-
-/* Navbar blur tint */
-.navTint {
-  height: 100%; 
-  width: 100%; 
-
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  
-  background: var(--bg); 
-  opacity: .5; 
-  
-  z-index: -1;
-}
-
-html[mobile] .navTint {
-  display: none;
 }
 
 /* Navbar buttons */
@@ -378,7 +363,7 @@ html[mobile] .navBtn {
   z-index: 51;
 }
 
-/* Menu */
+/* Menu container */
 #navMenu {
   height: fit-content;
   max-height: 40px;
@@ -392,6 +377,9 @@ html[mobile] .navBtn {
   position: relative;
 
   box-sizing: border-box;
+  background: var(--bgT); 
+  backdrop-filter: blur(5px);
+
   border: solid 2px var(--accent);
   border-radius: 10px;
 
@@ -415,12 +403,11 @@ html:not([mobile]) #navMenu[menu] {
   margin-top: 70px;
 }
 
-#navMenu:hover {
+#navMenu:not([menu]):hover {
   background: var(--accentT);
 }
 
 #navMenu[menu]:hover {
-  background: none;
   cursor: auto;
 }
 
@@ -456,6 +443,8 @@ html:not([mobile]) #navMenu[menu] {
 .navMenuBG {
   height: 100%; 
   width: 100%; 
+
+  display: none;
 
   position: absolute; 
   top: 0; 
@@ -534,7 +523,7 @@ html:not([mobile]) #navMenu[menu] {
   z-index: 60;
 }
 
-/* Menu */
+/* Menu container */
 #achMenu {
   width: 400px; 
   max-width: calc(100% - 20px);
@@ -994,7 +983,7 @@ html[mobile] .homeDT {
   gap: calc(3 * var(--pageGap));
 }
 
-html[mobile] .about {
+html[mobile] #about {
   flex-direction: column-reverse; 
 }
 
