--- a/Data/CSS/main.css
+++ b/Data/CSS/main.css
@@ -1268,10 +1268,13 @@ html[mobile] .pr > div:nth-of-type(1) {
 .pr > div:nth-of-type(1) > div:nth-of-type(2) > iframe {
   width: 100%; 
   height: 100%;
+  margin: 0;
+
   position: absolute;
   top: 0;
   left: 0;
-  margin: -2px;
+
+  border: none;
 }
 
 .pr > div:nth-of-type(1)[video] > div:nth-of-type(2) > iframe {
